# probabilistic_dca

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: Streamlit_App.py  app.py
app/pages/: 1_Pipeline_Run.py  2_Generate_Report.py
data/: Probabilistic_DCA_Report (1).docx  Probabilistic_DCA_Report.docx  Probabilistic_DCA_Report_AF6h.docx  Probabilistic_DCA_Report_synthetic.docx  Probabilistic_DCA_Report_synthetic_dataset.docx  synthetic_pan_crm_data.csv  vm_daily_prod.csv  wells_final_Q12020.csv
data/model_fit_results/: Probabilistic_DCA_Report_synthetic_dataset.docx  fit_results_AF6h.csv  fit_results_synthetic_dataset.csv
data/model_fit_results/arps/: arps_sse.csv
data/model_fit_results/crm/: crm_sse.csv
data/model_fit_results/lgm/: lgm_sse.csv
data/model_fit_results/sem/: sem_parameters.csv  sem_sse.csv
scripts/: crm_synthetic_dataset.py  probabilistic_DCA.py
scripts/old/: 01_Probabilistic DCA.py  Probabilistic DCA for VM Forecasting_v1.py  Probabilistic DCA for VM Forecasting_v2.py  Probabilistic DCA for VM Forecasting_v3.py  Probabilistic DCA for VM Forecasting_v4.py  VM_Production_Analysis_DCA.py  production_webscraper.py  refactored gemini.py
src/probabilistic_dca/: config.py  logging_setup.py
src/probabilistic_dca/data/: Probabilistic_DCA_Report.docx  Probabilistic_DCA_Report_synthetic_dataset.docx  synthetic_pan_crm_data.csv  wells_final_Q42024_df.csv
src/probabilistic_dca/my_dca_models/: base_models.py  data_processing.py  fitting.py  pipeline.py  plotting.py  processing.py  (+1 more)
(+14 files in other folders)
