[project]
name = "probabilistic-dca"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexis Ortega",email = "alexort74@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "docx (>=0.2.4,<0.3.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
